# cpp-praktikum

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: ci.yml  github-actions-demo.yml
01_basics/: .clang-format  CMakeLists.txt  Makefile
01_basics/src/: main.cpp  rational.cpp  rational.hpp  rational.test.cpp
02_memory/: 02_memory.project  CMakeLists.txt  food.csv
02_memory/src/: food.cpp  food.hpp  food.test.cpp  main.cpp  map.cpp  map.hpp  map.test.cpp
03_oo/: .clangd  CMakeLists.txt
03_oo/src/: board.cpp  board.hpp  board.test.cpp  game_controller.cpp  game_controller.hpp  human_player.cpp  human_player.hpp  human_player.test.cpp  normal_player.cpp  normal_player.hpp  normal_player.test.cpp  perfect_player.cpp  perfect_player.hpp  player.cpp  player.hpp  random_player.cpp  random_player.hpp  random_player.test.cpp  tictactoe.cpp  util.cpp  util.hpp  util.test.cpp  util.test.hpp
04_advanced/: CMakeLists.txt  Makefile
04_advanced/src/: main.cpp  numerik.cpp  numerik.hpp  numerik.test.cpp  strings.cpp  strings.hpp  strings.test.cpp
05_c/: .clangd  CMakeLists.txt  Makefile
05_c/src/: main.c  registers.c  registers.h  registers.test.cpp  strings.c  strings.h  strings.test.cpp
